Changed URL to https from http

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         var GIPH = $(this).attr("data-name");
         console.log("Pulled info from the button")
-        var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + GIPH + "&api_key=qHQ8d2mSYhfkuVWOa1duti7nFRKF4Zdp&limit=10"
+        var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + GIPH + "&api_key=qHQ8d2mSYhfkuVWOa1duti7nFRKF4Zdp&limit=10"
         
         console.log(queryURL)
 
